tests/errors/untyped_argument.err
Type Error: Unknown identifier: `bar`
On file `tests/errors/untyped_argument.vrv` at 3:5
3: foo(bar)
       ^
